api-post-create,get,getall,api-user-sigin,signup,frontend-get all post,post full view

--- a/client/src/app/components/blog-card/blog-card.component.html
+++ b/client/src/app/components/blog-card/blog-card.component.html
@@ -21,7 +21,7 @@
           <button mat-raised-button color="warn" (click)="delete(post.postId)">Delete</button>
         </ng-container>
         <span class="spacer"></span>
-        <button mat-raised-button color="primary" [routerLink]="['/blog/', post._id, '2343435345' | slug]">Read
+        <button mat-raised-button color="primary" [routerLink]="['/blog/', post._id | slug]">Read
           More</button>
       </mat-card-actions>
     </mat-card>
