--- a/client/src/app/components/blog/blog.component.scss
+++ b/client/src/app/components/blog/blog.component.scss
@@ -26,4 +26,16 @@
       margin-left: 10px;
     }
   }
+
+  .blog-card {
+    max-width: 700px;
+    margin: auto;
+  }
   
+  .example-header-image {
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: cover;
+  }
+  .blog-img{
+    margin:0px 0px 15px 0px;
+  }
